# SIREN

./: .gitignore  Makefile  README.md  SIREN  main.cpp
backend/: CMakeLists.txt  app.py
backend/.cache/clangd/index/: main.cpp.91278D83120EB79C.idx
backend/include/constants/: communication.hpp  error.hpp  hardware.hpp  math.hpp  message.hpp  performance.hpp  security.hpp
backend/include/core/: config.hpp  master_controller.hpp  performance_monitor.hpp  system_state_manager.hpp
backend/include/data/: radar_types.hpp  sonar_types.hpp
backend/include/security/: ssl_context_manager.hpp
backend/include/serial/: arduino_protocol_parser.hpp  serial_interface.hpp
backend/include/utils/: constants.hpp  error_handler.hpp  json_serializer.hpp  statistics_calculator.hpp
backend/include/websocket/: connection_acceptor.hpp  connection_manager.hpp  data_broadcast_coordinator.hpp  message_broadcaster.hpp  message_queue_manager.hpp  server.hpp  server_event_handler.hpp  server_lifecycle_manager.hpp  session.hpp  session_manager.hpp  statistics_collector.hpp  websocket_connection_manager.hpp  websocket_message_broadcaster.hpp  websocket_server.hpp  websocket_session_manager.hpp
backend/src/: main.cpp
backend/src/core/: master_controller.cpp  performance_monitor.cpp  system_state_manager.cpp
backend/src/serial/: arduino_protocol_parser.cpp  serial_interface.cpp
backend/src/utils/: error_handler.cpp  json_serializer.cpp  statistics_calculator.cpp
backend/src/websocket/: connection_acceptor.cpp  connection_manager.cpp  data_broadcast_coordinator.cpp  message_broadcaster.cpp  message_queue_manager.cpp  server.cpp  server_event_handler.cpp  server_lifecycle_manager.cpp  session.cpp  session_manager.cpp  statistics_collector.cpp  websocket_connection_manager.cpp  websocket_message_broadcaster.cpp  websocket_server.cpp  websocket_session_manager.cpp
backend/templates/: index.html
docs/: hardware.md  installation.md  software.md
firmware/: Alert.cpp  Alert.h  Button.cpp  Button.h  DHTSensor.cpp  DHTSensor.h  Scanner.cpp  Scanner.h  Servo.cpp  Servo.h  SpeedOfSound.cpp  SpeedOfSound.h  Ultrasonic.cpp  Ultrasonic.h  communication.ino  config.h  environment.ino  firmware.ino  motor.ino  physics.ino  radar.ino  sensor.ino  sonar.ino
frontend/: CMakeLists.txt  WINDOW_CONTROLS_USAGE.md  package-lock.json
frontend/app/components/: RadarDisplay.tsx
frontend/app/constants/: config.ts  index.ts
frontend/app/lib/: websocket-server.ts
frontend/app/types/: index.ts
frontend/app/utils/: radar-math.ts
frontend/include/constants/: Application.h  Data.h  LayoutConstants.h  Network.h  UI.h  VisualizationConstants.h  WindowControls.h
frontend/include/data/: RadarDataParser.h  SonarDataParser.h
frontend/include/network/: IWebSocketClient.h  WebSocketClient.h
frontend/include/ui/: ConnectionStatusWidget.h  MainLayout.h  MainWindow.h  MilitaryMainWindow.h  MilitaryTheme.h  PanelFactory.h  RadarMainWindow.h  SonarDataWidget.h  SonarVisualizationWidget.h  SplashScreen.h  Theme.h
frontend/include/ui/controls/: CloseButton.h  MaximizeButton.h  MinimizeButton.h  WindowControlBar.h  WindowControlButton.h  WindowControlHandler.h
frontend/include/visualization/: PolarCoordinateConverter.h  SonarAnimationController.h  SonarDataBuffer.h
frontend/resources/: resources.qrc
frontend/src/: demo_main.cpp  main.cpp
frontend/src/data/: SonarDataParser.cpp
frontend/src/network/: WebSocketClient.cpp
frontend/src/ui/: ConnectionStatusWidget.cpp  MainLayout.cpp  MainWindow.cpp  MilitaryMainWindow.cpp  MilitaryTheme.cpp  PanelFactory.cpp  SonarDataWidget.cpp  SonarVisualizationWidget.cpp  SplashScreen.cpp  Theme.cpp
frontend/src/ui/controls/: CloseButton.cpp  MaximizeButton.cpp  MinimizeButton.cpp  WindowControlBar.cpp  WindowControlButton.cpp  WindowControlHandler.cpp
frontend/src/visualization/: PolarCoordinateConverter.cpp  SonarAnimationController.cpp  SonarDataBuffer.cpp
unoRadar/: communication.ino  motor.ino  radar.ino  sensor.ino  unoRadar.ino
visualization/: README.md  package-lock.json  package.json  server.ts
visualization/app/components/: LiveRadarDisplay.tsx  RadarDisplay.tsx  RawDataDisplay.tsx  index.ts
visualization/app/constants/: config.ts  index.ts  radar.ts
visualization/app/hooks/: useWebSocket.ts
visualization/app/lib/: data-buffer.ts  index.ts  parser.ts  serial.ts  websocket-server.ts
visualization/app/routes/: _index.tsx
visualization/app/types/: radar.ts
visualization/app/utils/: index.ts  radar-math.ts
